@@ -1,3 +1,8 @@
+2016-02-19  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/67767
+	* g++.dg/cpp0x/pr67767.C: New test.
+
 2016-02-19  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	* lib/target-supports.exp: Define aarch64_asm_FUNC_ok checks
