@@ -1,3 +1,10 @@
+2016-02-19  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/67767
+	* parser.c (cp_parser_std_attribute_spec_seq): Don't assume
+	attr_spec is always single element chain, chain all the attributes
+	properly together in the right order.
+
 2016-02-18  Jason Merrill  <jason@redhat.com>
 
 	* mangle.c (maybe_check_abi_tags): Add for_decl parm.  Call
